solution/zookeeper/2-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  namespace: kafka
  labels:
    name: zookeeper
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    name: zookeeper

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: zookeeper
  namespace: kafka
spec:
  serviceName: zoo1
  replicas: 1
  selector:
    matchLabels:
      name: zookeeper
  template:
    metadata:
        labels:
          name: zookeeper
    spec:
      # nodeSelector:
      #   nodeType: memory-eu-west
      containers:
      - name: zoo1
        image: zookeeper:latest
        ports:
        - containerPort: 2181
        volumeMounts:
          - name: zookeeper-volume
            mountPath: "/var/lib/zookeeper"
      volumes:
          - name: zookeeper-volume
            persistentVolumeClaim:
              claimName: zookeeper-volume-claim
